syntax = "proto3";

import "google/protobuf/empty.proto";
package gk;

option go_package = "pkg/pb";

service UserService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Signup(SignupRequest) returns (google.protobuf.Empty);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message SignupRequest {
    string username = 1;
    string password = 2;
}